cmake_minimum_required(VERSION 3.13)
project(ds_using_c C)

set(CMAKE_C_STANDARD 99)

add_executable(ch1_1_sizeof_eg src/ch1_1_sizeof_eg.c)
add_executable(ch1_2_area_circle src/ch1_2_area_circle.c)
add_executable(ch1_3_cast_eg src/ch1_3_cast_eg.c)
add_executable(ch1_4_simple_if src/ch1_4_simple_if.c)
add_executable(ch1_5_simple_if_else src/ch1_5_simple_if_else.c)
add_executable(ch1_6_simple_if_else_if src/ch1_6_simple_if_else_if.c)
add_executable(ch1_7_simple_switch_case src/ch1_7_simple_switch_case.c)
add_executable(ch1_8_while_eg src/ch1_8_while_eg.c)
